# internal/interface/http/dto/snapshot.go
@@ -1,0 +1,6 @@
+package dto
+
+type GetSnapshotResponse struct {
+	Commit   string `json:"commit"`
+	Snapshot string `json:"snapshot"`
+}
